# libside

./: .gitignore  .gitreview  LICENSE  Makefile  Makefile.am  README.md  bootstrap  configure.ac  pre-inst-env.in  test.c
doc/: Makefile.am  rfc-libside.txt  rfc-side-abi.md  rfc-side-abi.txt
include/: Makefile.am
include/side/: api.h  attribute-abi.h  endian.h  event-description-abi.h  instrumentation-c-api.h  macros-bkp.h  macros.h  static-check.h  trace.h  type-argument-abi.h  type-description-abi.h  type-value-abi.h  visitor-abi.h
include/side/abi/: attribute.h  event-description.h  type-argument.h  type-description.h  type-value.h  visitor.h
include/tgif/: endian.h  macros.h  trace.h
m4/: ae_config_feature.m4  ae_pprint.m4  ax_append_compile_flags.m4  ax_append_flag.m4  ax_c___attribute__.m4  ax_check_compile_flag.m4  ax_cxx_compile_stdcxx.m4  ax_pthread.m4  ax_require_defined.m4
src/: .tracer.c.swp  Makefile  Makefile.am  compiler.h  libside.pc.in  libtgif.pc.in  list.h  list_types.h  rcu.c  rcu.h  rculist.h  side.c  smp.c  smp.h  test.c  tgif.c  tracer.c  tracer.h  visit-arg-vec.c  visit-arg-vec.h  visit-description.c  visit-description.h
src/lib/: Makefile.am
src/lib/librcu/: Makefile.am  rcu.c  rcu.h
src/lib/libside/: Makefile.am  rculist.h  side.c
src/lib/libside-console-tracer/: Makefile.am  tracer.c  visit-description.c  visit-description.h
src/lib/libside-tools/: Makefile.am  visit-arg-vec.c  visit-arg-vec.h  visit-description.c  visit-description.h
src/lib/libsmp/: Makefile.am  smp.c  smp.h
src/lib/pkgconfig/: Makefile.am  libside-console-tracer.pc.in  libside-tracer.pc.in  libside.pc.in
tests/: Makefile  Makefile.am
tests/regression/: Makefile  side-rcu-test.c  tgif-rcu-test.c
tests/static-checker/: Makefile.am  argument-array-types-incompatible.c  argument-vla-types-incompatible.c  duplicated-fields.c  null-field.c  optional-mismatch.c  prologue.c  run-tests  static-event-call-mismatch.c
tests/unit/: README.md  c-native-types.h  demo.c  statedump.c  test-cxx.cpp  test-no-sc-cxx.cpp  test-no-sc.c  test-sc-cxx.cpp  test-sc.c  test.c
tests/utils/: tap.c  tap.h  tap.sh  utils.sh
