# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2022 EfficiOS Inc.

nobase_include_HEADERS = \
	side/abi/attribute.h \
	side/abi/event-description.h \
	side/abi/type-argument.h \
	side/abi/type-description.h \
	side/abi/type-value.h \
	side/abi/visitor.h \
	side/api.h \
	side/endian.h \
	side/instrumentation-c-api.h \
	side/macros.h \
	side/static-check.h \
	side/trace.h
