# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2022-2024 EfficiOS Inc.

lib_LTLIBRARIES = libside-console-tracer.la

libside_console_tracer_la_SOURCES = \
	tracer.c \
	visit-arg-vec.c \
	visit-arg-vec.h \
	visit-description.c \
	visit-description.h

libside_console_tracer_la_LIBADD = \
	$(top_builddir)/src/lib/libside/libside.la
