# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2022-2024 EfficiOS Inc.

noinst_LTLIBRARIES = libside-tools.la

libside_tools_la_SOURCES = \
	visit-arg-vec.c \
	visit-arg-vec.h \
	visit-description.c \
	visit-description.h


libside_tools_la_LDFLAGS = -no-undefined -version-info $(SIDE_LIBRARY_VERSION)
